# irssi-v5

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.soju  README.md  compose.yaml  debugserver.sh  env.example.txt  soju.config  sojuctl.config
public/: index.html  ttyd.html
public/css/: styles.css  ttyd-overrides.css
public/js/: admin.js  app.js
soju/: Dockerfile.soju  compose.yaml  soju.config
src/: Dockerfile.soju  config.rs  main.rs
src/auth/: mod.rs
src/session/: mod.rs
src/soju/: mod.rs
src/store/: mod.rs
