[package]
name = "irssi-v5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "irssi-v5"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# HTTP client (WebSocket proxy to ttyd)
tokio-tungstenite = "0.23"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
humantime = "2"

# JWT / JWKS validation
jsonwebtoken = "9"
serde_json = "1"

# Serialization
serde = { version = "1", features = ["derive"] }

# SQLite
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Config from env
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
rand = "0.8"
hex = "0.4"
regex = "1"
once_cell = "1"
dashmap = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true